Image is now no longer too large for display

--- a/client/sass/components/_imageModal.scss
+++ b/client/sass/components/_imageModal.scss
@@ -26,6 +26,6 @@
 }
 
 .ImageModal__Image {
+  max-width: 100%;
   border: 1px solid $primary-border;
-  max-height: 100%;
 }
